--- a/car-stock-frontend/package.json
+++ b/car-stock-frontend/package.json
@@ -12,14 +12,17 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "@smui/data-table": "^7.0.0",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^3.55.0"
+    "svelte": "^4.2.19"
   },
   "dependencies": {
+    "@sveltestrap/sveltestrap": "^6.2.7",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "sirv-cli": "^2.0.0"
   }
 }
