--- a/car-stock-frontend/package.json
+++ b/car-stock-frontend/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
+    "rollup-plugin-svg": "^2.0.0",
     "svelte": "^4.2.19"
   },
   "dependencies": {
