--- a/car-stock-frontend/package.json
+++ b/car-stock-frontend/package.json
@@ -24,6 +24,7 @@
     "@sveltestrap/sveltestrap": "^6.2.7",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "sirv-cli": "^2.0.0"
   }
 }
