--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "CarDatabase": "Data Source=CarStocks.db"
   },
+  "JWT":{
+    "Key": "zt?6+m=fh5MT#>.hBTF*T_!W/&/8k-gn<h@B^JK~?yK13fU1#H=[(h&037RHS;", 
+    "Issuer": "MyCarAuthService",
+    "Audience": "my_car_stock_api",
+    "ExpiresInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
