removed jwt secret

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,7 +9,7 @@
     "CarDatabase": "Data Source=CarStocks.db"
   },
   "JWT":{
-    "Key": "zt?6+m=fh5MT#>.hBTF*T_!W/&/8k-gn<h@B^JK~?yK13fU1#H=[(h&037RHS;", 
+    "Key": "", 
     "Issuer": "MyCarAuthService",
     "Audience": "my_car_stock_api",
     "ExpiresInMinutes": 60
